--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
