--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node index.js"
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
+    "config": "^3.3.7",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
