--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
