--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.7.4",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
